--- a/package.json
+++ b/package.json
@@ -6,11 +6,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "clsx": "^2.0.0",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "engines": {
     "node": ">=18"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.29",
+    "sass": "^1.66.1",
+    "tailwindcss": "^3.3.3"
   }
 }
